Code Cleanup (#580)
* Changed class array to generified List

to help with static type checking

* Using Double.isNaN instead of equality check

Equality comparison to these values is always false. Instead, use the Double.isNaN() of Float.isNaN() methods instead.

* Using .valueOf instead of constructor for better performance

* Made inner classes static

A static inner class does not keep an implicit reference to its enclosing instance. This prevents a common cause of memory leaks and uses less memory per instance of the class.

* Removed unused imports

* Code Cleanup

- Replaced new Float(…) with Float.valueOf
- ditto for Double
- Used System.arraycopy instead of DIY loop
- Used sublists clear instead of DIY loop
- Used parameterized constructor of LinkedList instead of new …() and .addAll
- Used SingletonList instead of Arrays.asList
- Used StringBuilder instead of String concatenation in loops

* Code Cleanup

- removed empty Javadoc

* Added missing import due to merge

* Update src/main/java/de/thomas_oster/visicut/gui/EditVectorProfileDialog.java

Co-authored-by: Max Gaukler <mgmax@users.noreply.github.com>

* Fix Travis CI build

Co-authored-by: Max Gaukler <mgmax@users.noreply.github.com>
Co-authored-by: Max Gaukler <development@maxgaukler.de>